--- a/adding-css/animation/transformation/skew.html
+++ b/adding-css/animation/transformation/skew.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1::selection{
-            background-color: blue;
-            color: black;
+        .skew{
+            height: 100px;
+            width: 100px;
+            background-color: darkmagenta;
+            transform: skew(20deg,10deg);
+            margin: 20px auto;
 
         }
     </style>
 </head>
 <body>
-    <h1>this is selector</h1>
+    <div class="skew"></div>
 </body>
 </html>
