--- a/adding-css/combinators/descendant.html
+++ b/adding-css/combinators/descendant.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1::selection{
-            background-color: blue;
-            color: black;
-
+        ul li {
+            color: brown;
         }
     </style>
 </head>
 <body>
-    <h1>this is selector</h1>
+    <ul>
+        <li>item 1</li>
+        <li>item 2
+        <ul>
+            <li>subitem 1</li>
+            <li>subitem 2</li>
+        </ul>
+        </li>
+    </ul>
 </body>
 </html>
