--- a/adding-css/animation/transformation/rotate.html
+++ b/adding-css/animation/transformation/rotate.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1::selection{
-            background-color: blue;
-            color: black;
-
+        .rotate{
+            width: 100px;
+            height: 100px;
+            background-color: chocolate;
+            transform: rotate(45deg);
+            margin: 20px auto;
         }
     </style>
 </head>
 <body>
-    <h1>this is selector</h1>
+    <div class="rotate"></div>
 </body>
 </html>
