--- a/adding-css/animation/transformation/scale.html
+++ b/adding-css/animation/transformation/scale.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1::selection{
-            background-color: blue;
-            color: black;
-
+        .scale-box{
+            width: 100px;
+            height: 100px;
+            background-color: aqua;
+            margin: 20px auto;
+            transform: scale(1.5);
         }
     </style>
 </head>
 <body>
-    <h1>this is selector</h1>
+    <div class="scale-box"></div>
 </body>
 </html>
