--- a/adding-css/animation/transformation/transalate.html
+++ b/adding-css/animation/transformation/transalate.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1::selection{
-            background-color: blue;
-            color: black;
-
+        .translate-box{
+            width: 100px;
+            height: 100px;
+            background-color:darkseagreen;
+            transform: translate(150px,30px);
         }
     </style>
 </head>
 <body>
-    <h1>this is selector</h1>
+    <div class="translate-box"></div>
 </body>
 </html>
