--- a/adding-css/combinators/adjacent.html
+++ b/adding-css/combinators/adjacent.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1::selection{
-            background-color: blue;
-            color: black;
-
+        h2+p{
+            color: green;
         }
     </style>
 </head>
 <body>
-    <h1>this is selector</h1>
+    <h2>heading</h2>
+    <p>para 1</p>
+    <p>para 2</p>
 </body>
 </html>
