--- a/adding-css/mediaQuery/index.html
+++ b/adding-css/mediaQuery/index.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        h1::selection{
-            background-color: blue;
-            color: black;
-
-        }
-    </style>
+    <link rel="stylesheet" href="./style-2.css">
 </head>
 <body>
-    <h1>this is selector</h1>
+    <div class="responsive-box">Hello Responsive World </div>
 </body>
 </html>
