--- a/adding-css/sass-variabe2/index.html
+++ b/adding-css/sass-variabe2/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        h1::selection{
-            background-color: blue;
-            color: black;
-
-        }
-    </style>
+    <link rel="stylesheet" href="./">
 </head>
 <body>
-    <h1>this is selector</h1>
+    <h1>with file extension SCSS</h1>
+    <h2>Hedding 1</h2>
+    <h3>hedding 2</h3>
+    <h4>hedding 3</h4>
+
 </body>
 </html>
